<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Expense</string>

    <!-- dummy strings -->
    <string name="checkbox">Checkbox</string>

    <!-- expense types -->
    <string name="OTHER">Other</string>
    <string name="GAS">Natural gas bill</string>
    <string name="ELECTRICITY">Electricity bill</string>
    <string name="PHONE">Phone bill</string>
    <string name="INTERNET">Internet bill</string>
    <string name="TAXES">Utilities bill</string>
    <string name="GYM">Gym subscription</string>
    <string name="PETROL">Fuel</string>
    <string name="FOOD">Food</string>
    <string name="RESTAURANT">Restaurant</string>
    <string name="CAR">Car maintenance</string>
    <string name="SPECIAL">Special</string>

    <!-- expense list activity -->
    <string name="expenseListActivityTitle">Monthly Expenses</string>
    <string name="expenseListActivityTotalLabel">Total:</string>
    <string name="expenseListActivityFilteredTotalLabel">%1$s (%2$s%%) of %3$s</string>
    <string name="expenseListActivityZero">0.00</string>
    <string name="expenseListActivityAddExpenseButton">Add expense</string>
    <string name="expenseListActivityChangeMonth">Change month</string>
    <string name="expenseListActivityExportSuccessful">Export successful</string>
    <string name="expenseListSwitchList">List</string>
    <string name="expenseListSwitchChart">Chart</string>

    <!-- yearly report activity -->
    <string name="yearlyReportTitle">Yearly Report</string>
    <string name="yearlyReportYear">Year</string>
    <string name="yearlyReportExpenseTypePerYear">Expense \\ Year</string>
    <string name="yearlyReportCurrentYear">Current Year</string>
    <string name="yearlyReportLastYear">Last Year</string>
    <string name="yearlyReportVariation">Variation</string>
    <string name="yearlyReportWithSpecial">With Special</string>
    <string name="yearlyReportWithoutSpecial">Without Special</string>

    <!-- year comparison activity -->
    <string name="yearComparisonTitle">Comparison</string>
    <string name="yearComparisonSwitchReport">Report</string>
    <string name="yearComparisonSwitchChart">Chart</string>
    <string name="yearComparisonMonthPerYear">Month \\ Year</string>
    <string name="yearComparisonCurrentYear">Current Year</string>
    <string name="yearComparisonLastYear">Last Year</string>
    <string name="yearComparisonVariation">Variation</string>
    <string name="yearComparisonTotal">Total</string>

    <!-- expense search result-->
    <string name="expenseSearchResultTitle">Expenses</string>
    <string name="expenseSearchResultActivityTotalLabel">Total:</string>
    <string name="expenseSearchResultActivityFilteredTotalLabel">%1$s (%2$s%%) of %3$s</string>
    <string name="expenseSearchResultActivityZero">0.00</string>
    <string name="expenseSearchResultActivityFilterButton">"Filter.."</string>

    <!-- special expenses-->
    <string name="specialExpensesTitle">Special expenses</string>
    <string name="specialExpensesActivityAddExpenseButton">Add expense</string>
    <string name="specialExpensesActivityTotalLabel">Total:</string>
    <string name="specialExpensesActivityZero">0.00</string>

    <!-- add/edit expense activity -->
    <string name="addEditExpenseTitle">Expense</string>
    <string name="addEditExpenseActivityExpenseTypeLabel">Expense Type:</string>
    <string name="addEditExpenseActivityValueLabel">Value:</string>
    <string name="addEditExpenseActivityDateLabel">Date:</string>
    <string name="addEditExpenseActivityCommentLabel">Comment:</string>
    <string name="addEditExpenseActivitySaveButton">Save</string>

    <!-- remove expense dialog -->
    <string name="removeExpenseDialogTitle">Confirm</string>
    <string name="removeExpenseDialogMessage">Really delete expense</string>
    <string name="removeExpenseDialogYes">Yes</string>
    <string name="removeExpenseDialogNo">No</string>

    <!-- filter expenses dialog -->
    <string name="filterExpenseDialogTitle">Expense Type selection</string>
    <string name="filterExpenseDialogOk">OK</string>
    <string name="filterExpenseDialogCancel">Cancel</string>
    <string name="filterExpenseDialogSelectAll">  All  </string>
    <string name="filterExpenseDialogSelectNone">None</string>
    <string name="filterExpenseDialogInvertSelection">Invert</string>
    <string name="filterExpenseDialogSelectSingles">Singles</string>
    <string name="filterExpenseDialogComment">Comment:</string>
    <string name="filterExpenseDialogAddComment">+</string>
    <string name="filterExpenseDialogRemoveComment">-</string>
    <string name="filterExpenseDialogEmptySelection">The filter selection is empty.</string>

    <!-- navigation drawer -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- main menu -->
    <string name="mainMenuReports">Reports</string>
    <string name="mainMenuSearchDatabase">Search database</string>
    <string name="mainMenuSpecialExpenses">Special expenses</string>
    <string name="mainMenuYearlyReport">Yearly report</string>
    <string name="mainMenuChartExpenseHistory">History by type</string>
    <string name="mainMenuChartYearlyComparison">Yearly comparison</string>
    <string name="mainMenuOrderBy">Order by..</string>
    <string name="mainMenuOrderByDateAscending">by date ascending</string>
    <string name="mainMenuOrderByDateDescending">by date descending</string>
    <string name="mainMenuOrderByValueAscending">by value ascending</string>
    <string name="mainMenuOrderByValueDescending">by value descending</string>
    <string name="mainMenuOrderByTypeAscending">by type ascending</string>
    <string name="mainMenuOrderByTypeDescending">by type descending</string>
    <string name="mainMenuChart">Chart..</string>
    <string name="mainMenuDatabase">Database</string>
    <string name="mainMenuDatabaseImport">Restore</string>
    <string name="mainMenuDatabaseExport">Dump</string>

    <!-- import/export db -->
    <string name="importExportDialogRestoreButton">Restore</string>
    <string name="importExportDialogCancelButton">Cancel</string>

    <!-- expense menu item -->
    <string name="expenseMenuItemNr">No</string>
    <string name="expenseMenuItemDummyComment">dummy comment</string>
    <string name="expenseMenuItemDummyType">dummy type</string>
    <string name="expenseMenuItemDummyDate">dummy date</string>
    <string name="expenseMenuItemDummyValue">dummy value</string>
    <string name="expenseMenuItemContentDescription">delete button</string>

</resources>
