<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/expense_search_result_menu_order_by"
        android:title="@string/mainMenuOrderBy">
        <menu>
            <item
                android:id="@+id/expense_search_result_menu_order_by_date_ascending"
                android:orderInCategory="1"
                android:title="@string/mainMenuOrderByDateAscending" />
            <item
                android:id="@+id/expense_search_result_menu_order_by_date_descending"
                android:orderInCategory="2"
                android:title="@string/mainMenuOrderByDateDescending" />
            <item
                android:id="@+id/expense_search_result_menu_order_by_type_ascending"
                android:orderInCategory="3"
                android:title="@string/mainMenuOrderByTypeAscending" />
            <item
                android:id="@+id/expense_search_result_menu_order_by_type_descending"
                android:orderInCategory="4"
                android:title="@string/mainMenuOrderByTypeDescending" />
            <item
                android:id="@+id/expense_search_result_menu_order_by_value_ascending"
                android:orderInCategory="5"
                android:title="@string/mainMenuOrderByValueAscending" />
            <item
                android:id="@+id/expense_search_result_menu_order_by_value_descending"
                android:orderInCategory="6"
                android:title="@string/mainMenuOrderByValueDescending" />
        </menu>
    </item>
</menu>