<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:title="@string/mainMenuCategories">
        <menu>
            <item
                android:id="@+id/navigation_special_expenses"
                android:icon="@drawable/ic_special_expenses"
                android:title="@string/mainMenuSpecialExpenses" />

            <item
                android:id="@+id/navigation_subscription_expenses"
                android:icon="@drawable/ic_subscription_expenses"
                android:title="@string/mainMenuSubscriptionExpenses" />

            <item
                android:id="@+id/navigation_recurrent_expenses"
                android:icon="@drawable/ic_recurrent_expenses"
                android:title="@string/mainMenuRecurrentExpenses" />
        </menu>
    </item>

    <item
        android:id="@+id/navigation_search_db"
        android:icon="@drawable/ic_search_db"
        android:title="@string/mainMenuSearchDatabase" />

    <item android:title="@string/mainMenuReports">
        <menu>

            <item
                android:id="@+id/navigation_yearly_report"
                android:icon="@drawable/ic_yearly_report"
                android:title="@string/mainMenuYearlyReport" />
            <item
                android:id="@+id/navigation_expense_history"
                android:icon="@drawable/ic_history"
                android:title="@string/mainMenuChartExpenseHistory" />
        </menu>
    </item>

    <item android:title="@string/mainMenuDatabase">
        <menu>
            <item
                android:id="@+id/navigation_database_dump"
                android:icon="@drawable/ic_db_dump"
                android:title="@string/mainMenuDatabaseExport" />
            <item
                android:id="@+id/navigation_database_restore"
                android:icon="@drawable/ic_db_restore"
                android:title="@string/mainMenuDatabaseImport" />
        </menu>
    </item>

</menu>