<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:descendantFocusability="blocksDescendants"
    android:orientation="horizontal"
    android:weightSum="1">

    <RelativeLayout
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="2dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:descendantFocusability="blocksDescendants"
        android:orientation="vertical">

        <TextView
            android:id="@+id/expenseListItemNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:gravity="end"
            android:text="@string/expenseMenuItemNr" />

        <TextView
            android:id="@+id/expenseListItemType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_alignBottom="@id/expenseListItemNumber"
            android:layout_toEndOf="@id/expenseListItemNumber"
            android:text="@string/expenseMenuItemDummyType"
            android:textSize="19sp"/>

        <TextView
            android:id="@+id/expenseListItemDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/expenseListItemNumber"
            android:layout_toEndOf="@id/expenseListItemType"
            android:layout_alignParentEnd="true"
            android:gravity="end"
            android:text="@string/expenseMenuItemDummyDate"/>

        <TextView
            android:id="@+id/expenseListItemDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@id/expenseListItemNumber"
            android:layout_below="@+id/expenseListItemNumber"
            android:text="@string/expenseMenuItemDummyComment" />

        <TextView
            android:id="@+id/expenseListItemValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/expenseListItemDescription"
            android:layout_below="@id/expenseListItemNumber"
            android:layout_alignEnd="@id/expenseListItemDate"
            android:layout_alignParentEnd="true"
            android:gravity="end"
            android:text="@string/expenseMenuItemDummyValue"
            android:textColor="@android:color/white"
            />
    </RelativeLayout>
    <ImageButton
        android:id="@+id/expenseListItemDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:onClick="deleteButtonPressed"
        android:src="@mipmap/ic_delete"
        android:background="@null"
        android:layout_weight="0.50"
        android:cropToPadding="false"
        android:adjustViewBounds="false"
        android:contentDescription="@string/expenseMenuItemContentDescription"/>
</LinearLayout>
