<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/yearlyComparisonPreviousYear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_arrow_left_icon"
            android:onClick="onClick" />

        <TextView
            android:id="@+id/yearlyComparisonCurrentYearText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="" />

        <Button
            android:id="@+id/yearlyComparisonNextYear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_arrow_right_icon"
            android:onClick="onClick" />

    </LinearLayout>


    <com.github.mikephil.charting.charts.BarChart
        android:id="@+id/yearComparisonBarChart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" />

    <TableLayout
        android:id="@+id/yearlyComparisonListReport"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:stretchColumns="1, 2, 3"
        android:visibility="gone">

        <TableRow
            android:layout_marginBottom="15dp"
            android:layout_marginTop="15dp">

            <TextView
                android:layout_column="0"
                android:gravity="start"
                android:text="@string/yearComparisonMonthPerYear"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/yearComparisonLastYearLabel"
                android:layout_column="1"
                android:gravity="end"
                android:text="@string/yearComparisonLastYear"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/yearComparisonCurrentYearLabel"
                android:layout_column="2"
                android:gravity="end"
                android:text="@string/yearComparisonCurrentYear"
                android:textSize="16sp" />

            <TextView
                android:layout_column="3"
                android:gravity="end"
                android:text="@string/yearComparisonVariation"
                android:textSize="16sp" />
        </TableRow>

        <View
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="@color/report_variation_table_delimiter" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/report_variation_table_delimiter" />

        <TableRow
            android:layout_marginBottom="15dp"
            android:layout_marginTop="15dp">

            <TextView
                android:layout_column="0"
                android:gravity="start"
                android:text="@string/yearComparisonTotal"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/yearComparisonLastYearTotal"
                android:layout_column="1"
                android:gravity="end"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/yearComparisonCurrentYearTotal"
                android:layout_column="2"
                android:gravity="end"
                android:textSize="16sp" />

        </TableRow>


    </TableLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp">

        <TextView
            android:id="@+id/yearComparisonChartExpenseType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="20sp" />

        <Switch
            android:id="@+id/yearComparisonSwitchChartReportButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:checked="true"
            android:textOff="@string/yearComparisonSwitchChart"
            android:textOn="@string/yearComparisonSwitchReport" />
    </LinearLayout>
</LinearLayout>