<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent" android:onClick="onClick">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <Button
                android:id="@+id/expenseListChangeMonthButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/expenseListActivityChangeMonth"
                android:onClick="onClick"/>
        <Button
                android:id="@+id/expenseListFiltersButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/expenseListActivityFilterButton"
                android:onClick="onClick"/>

    </LinearLayout>

    <ListView
            android:id="@+id/expansesListView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>

    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content">

        <TextView
                android:id="@+id/expenseListTotalLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/expenseListActivityTotalLabel"
                android:textSize="9pt"
                android:layout_gravity="left"
                />
        <TextView
                android:id="@+id/expenseListTotal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/expenseListActivityZero"
                android:textSize="9pt"
                android:layout_gravity="right"
                android:gravity="right"
                />
    </LinearLayout>

    <Button
            android:id="@+id/addExpenseButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/expenseListActivityAddExpenseButton"
            android:onClick="onClick"/>
</LinearLayout>

