<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent" android:onClick="onClick">

    <ListView
            android:id="@+id/specialExpensesListView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>

    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content">

        <TextView
                android:id="@+id/specialExpensesTotalLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/expenseListActivityTotalLabel"
                android:textSize="9pt"
                android:layout_gravity="start"
                />
        <TextView
                android:id="@+id/specialExpensesActivityTotalLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/specialExpensesActivityZero"
                android:textSize="9pt"
                android:layout_gravity="end"
                android:gravity="end"
                />
    </LinearLayout>

    <Button
        android:id="@+id/specialExpensesAddExpenseButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/specialExpensesActivityAddExpenseButton" />
</LinearLayout>

