<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="30dp">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:rowCount="4">

        <TextView
            android:id="@+id/addExpenseTypeLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/addEditExpenseActivityExpenseTypeLabel"
            android:textSize="10pt"
            android:layout_row="0"
            android:layout_column="0"/>

        <Spinner
            android:id="@+id/addExpenseSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|fill_horizontal"
            android:layout_row="0"
            android:layout_column="1"/>

        <TextView
            android:id="@+id/addExpenseValueLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@id/addExpenseValue"
            android:text="@string/addEditExpenseActivityValueLabel"
            android:textSize="10pt"
            android:layout_row="1"
            android:layout_column="0"/>

        <EditText
            android:id="@+id/addExpenseValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:inputType="numberDecimal"
            android:maxLines="1"
            android:layout_gravity="end|fill_horizontal"
            android:layout_row="1"
            android:layout_column="1"/>

        <TextView
            android:id="@+id/addExpenseCommentLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@id/addExpenseComment"
            android:text="@string/addEditExpenseActivityCommentLabel"
            android:textSize="10pt"
            android:layout_row="2"
            android:layout_column="0"/>

        <EditText
            android:id="@+id/addExpenseComment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:gravity="end"
            android:maxLines="1"
            android:layout_gravity="end|fill_horizontal"
            android:layout_row="2"
            android:layout_column="1"/>

        <Button
            android:id="@+id/addExpenseDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:layout_row="3"
            android:layout_column="0"
            android:layout_columnSpan="2"/>
    </GridLayout>

    <Button
        android:id="@+id/saveExpenseButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:text="@string/addEditExpenseActivitySaveButton"
        android:textSize="13pt" />
</LinearLayout>

